--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # Post-Note:
 
-9/2019 This ray tracer was part of my computer graphics final project. The c++ style used is now heavily dated and the repo is kep here mainly for reference.
+9/2019 This ray tracer was part of my computer graphics final project. The c++ style used is now heavily dated and the repo is kept here mainly for reference.
 
 # Description
 
